Add Cookies recipe page. Link recipes to index.html. Change names
Added cookie.html and its full contents. Added a cookie picture.
Link all three recipes to the index with unordered list. Changed
pizza recipe to Margherita Pizza to be more specific.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./flan.html">Flan Recipe</a>
+    <ul>
+    <li><a href="./flan.html">Flan</a></li>
+    <li><a href="./pages/pizza.html">Margherita Pizza</a></li>
+    <li><a href="./pages/cookie.html">Chewy Peanut Butter Chocolate Chip Cookies</a></li>
+    
 
+    
+    </ul>
 </body>
 
 
