--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Recipe</title>
+    <title>Margherita Pizza</title>
 </head>
 <body>
-   <h1>Pizza Recipe</h1> 
+   <h1>Margherita Pizza</h1> 
     <img width="300" height="300" src="../img/pizza.jpg" alt="Margherita Pizza on a white plate">
     <h2>Description</h2>
     <p>Who wants to spend $20+ for a pizza? In this economy?
